2002-08-22  Zbigniew Chyla  <cyba@gnome.pl>

	* pl.po: Updated Polish translation by
	GNOME PL Team <translators@gnome.pl>.

2002-08-08  Christian Neumair  <christian-neumair@web.de>

	* de.po: Updated German translation.

2002-08-09  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu)

    * nl.po: Dutch translation updated by Taco Witte.
    
2002-08-02  Christophe Merlet  <christophe@merlet.net>

	* fr.po: Updated French translation from work of
	Laurent Richard <kouran@iespana.es>.

2002-07-30  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-07-24  Zbigniew Chyla  <chyla@gnome.pl>

	* pl.po: Updated Polish translation by
	GNOME PL Team <translators@gnome.pl>.

2002-07-19  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

        * es.po: Updates Spanish Translation

2002-07-17  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2002-07-16  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2002-07-16  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2002-07-16  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2002-07-03  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2002-06-18  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2002-06-16  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

        * es.po: Updates Spanish Translation

2002-06-14  Zbigniew Chyla  <chyla@buy.pl>

	* pl.po: Updated Polish translation by
	GNOME PL Team <translators@gnome.pl>.

2002-06-13  Hasbullah Bin Pit <sebol@ikhlas.com>

	* ms.po: Updated Malay Translation.

2002-06-11  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added *.mo.
	* sv.po: Updated Swedish translation.

2002-05-31  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-05-14  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Added Vietnamese file
